# CalorAI

./: README.md  pyproject.toml
mealGen/: db.sqlite3  env_generator.py  manage.py
mealGen/core/: forms.py  models.py  views.py
mealGen/core/management/commands/: userdata.py
mealGen/core/migrations/: 0001_initial.py  0002_userhealthgoal_daily_calorie_goal_and_more.py  0003_userprofile_daily_calorie_goal.py
mealGen/core/templates/core/: add_mfp_credentials.html  base.html  edit_profile.html  home.html  login.html  model_results.html  signup.html
mealGen/core/util/: data_processor.py  generatedata.py  mfp_client.py  samplemfp.py
mealGen/dailylog/: apps.py  forms.py  models.py  views.py
mealGen/dailylog/management/: generate_daily_logs.py
mealGen/dailylog/management/commands/: clear_daily_logs.py  generate_daily_logs.py
mealGen/dailylog/migrations/: 0001_initial.py  0002_auto_20240421_1702.py  0003_dailylog_profile.py
mealGen/dailylog/templates/dailylog/: add_daily_log.html  log_success.html  log_sucess.html
mealGen/docs/: demo.md
mealGen/mealgen/: asgi.py  settings.py  urls.py  wsgi.py
mealGen/ml/: generate_models.py  make_plots.py  preprocess.py
mealGen/templates/: base.html  login.html  signup.html
mealGen/templates/registration/: login.html
mealGen/tests/: test_mfp_client.py
