[tool.poetry]
name = "OptimumMealGenerator"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"


[tool.poetry.dependencies]  
python = "^3.10"
Django = "^5.0.4"
openpyxl = "^3.1.2"
seaborn = "^0.13.2"
matplotlib = "^3.8.4"
scikit-learn = "^1.4.1.post1"
xgboost = "^2.0.3"
requests = "^2.31.0"
numpy = "^1.26.4"
django-tailwind = "^3.8.0"
pytest = "^8.1.1"
cryptography = "^42.0.5"
times = "^0.7"
datetime = "^5.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
